--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -546,28 +546,52 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.absolute{
+  position: absolute;
+}
+
+.relative{
+  position: relative;
+}
+
+.top-0{
+  top: 0px;
+}
+
+.top-10{
+  top: 2.5rem;
+}
+
+.top-20{
+  top: 5rem;
+}
+
+.m-auto{
+  margin: auto;
+}
+
 .flex{
   display: flex;
 }
 
-.h-28{
-  height: 7rem;
+.h-36{
+  height: 9rem;
 }
 
-.h-screen{
-  height: 100vh;
+.max-h-index{
+  max-height: 40rem;
 }
 
-.max-h-64{
-  max-height: 16rem;
-}
-
-.max-w-64{
-  max-width: 16rem;
+.w-full{
+  width: 100%;
 }
 
 .items-center{
   align-items: center;
+}
+
+.justify-center{
+  justify-content: center;
 }
 
 .justify-between{
@@ -587,11 +611,6 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-cyan-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(6 182 212 / var(--tw-bg-opacity));
-}
-
 .px-20{
   padding-left: 5rem;
   padding-right: 5rem;
@@ -606,6 +625,11 @@ video {
   line-height: 2.25rem;
 }
 
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -617,6 +641,30 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.underline{
+  text-decoration-line: underline;
+}
+
+.opacity-15{
+  opacity: 0.15;
+}
+
+.opacity-90{
+  opacity: 0.9;
+}
+
+.opacity-75{
+  opacity: 0.75;
+}
+
+.opacity-85{
+  opacity: 0.85;
+}
+
+.opacity-80{
+  opacity: 0.8;
 }
 
 .btn{
