--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,33 +5,13 @@
   <title>
     <%= title %>
   </title>
-  <link rel="stylesheet" href="/output.css">
+  <link rel="stylesheet" href="/styles/output.css">
 </head>
 
 <body>
-  <nav>
-    <h1>
-      <%= title %>
-    </h1>
-    <div>
-      <p>Brands</p>
-    </div>
-  </nav>
-  <p>Welcome to <%= title %>
-  </p>
-  <div>
-    <% cars.forEach(car=>{ %>
-      <div>
-        <p>
-          <%= car.model %>
-        </p>
-        <p>
-          <%= car.price %>
-        </p>
-      </div>
-
-      <% }) %>
-  </div>
+  <% include ./partials/nav.ejs %>
+    <% include ./partials/homePageImage.ejs %>
+      <p>Our latest products</p>
 </body>
 
 </html>
