Dodati linkovi za popularne automobile

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,31 +2,38 @@
     <div class="col-span-3">
         <h3 class="footerH">Popular models</h3>
         <div class="grid grid-cols-4 gap-5 h-2/3 p-6 pl-10 w-full justify-center items-center ">
-            <div class="cardFooter">
-                <p>Audi A4</p>
-            </div>
-            <div class="cardFooter">
-                <p>Audi A4</p>
-            </div>
-            <div class="cardFooter">
-                <p>Audi A4</p>
-            </div>
-            <div class="cardFooter">
-                <p>Audi A4</p>
-            </div>
-            <div class="cardFooter">
-                <p>Audi A4</p>
-            </div>
-            <div class="cardFooter">
-                <p>Audi A4</p>
-            </div>
+            <a href="/products/65d9e0fc1f7fae4851cb01ca">
+                <div class="cardFooter">
+                    <p>Audi A7</p>
+                </div>
+            </a>
+            <a href="/products/65db18fc88a9437c97c9bc62">
+                <div class="cardFooter">
+                    <p>BMW M5</p>
+                </div>
+            </a>
+            <a href="/products/65d9e1aafac819c97f37981d">
+                <div class="cardFooter">
+                    <p>Audi Q7</p>
+                </div>
+            </a>
+            <a href="/products/65d9e139e3a9a53fc7f9be3d">
+                <div class="cardFooter">
+                    <p>Audi Q3</p>
+                </div>
+            </a>
+            <a href="/products/65d9e0a993d233b02de3ab46">
+                <div class="cardFooter">
+                    <p>Audi A4</p>
+                </div>
+            </a>
         </div>
     </div>
     <div>
         <h3 class="footerH">Featured content</h3>
         <div class="flex flex-col gap-5 mt-10 pl-5">
             <div>
-                <p>BMW has big announcement:</p>
+                <p>BMW has a big announcement:</p>
                 <a target="_blank" class="aFooter"
                     href="https://www.carwow.co.uk/news/6613/new-bmw-models-coming-soon#gref">Click for
                     more...</a>
