--- a/views/partials/filterComponent.ejs
+++ b/views/partials/filterComponent.ejs
@@ -1,18 +1,25 @@
-<h2 class="flex justify-center text-2xl">Filter items:</h2>
-<div class="flex flex-col gap-2">
-    <p>Brand:</p>
-    <select onchange="submitForm()" class="filterProductsSelect" name="filterMethodBrand" id="selectFilter">
-        <option value="none" <%=selectedOptionFilter === '' ? 'selected' : ''  %>>All</option>
-        <option value="BMW" <%=selectedOptionFilter === 'BMW' ? 'selected' : ''  %>>BMW</option>
-        <option value="Audi" <%=selectedOptionFilter === 'Audi' ? 'selected' : ''  %>>Audi</option>
-    </select>
+<h2 class="flex justify-center text-2xl font-bold">Filter items:</h2>
+<div class="flex flex-col mt-10 gap-5">
+    <p class="flex justify-center text-xl">Brand:</p>
+    <div class="flex flex-col gap-2">
+        <label>
+            <input onclick="submitForm()" type="checkbox" name="checkboxBrand" value="BMW"
+                <%= (checkboxesChecked && checkboxesChecked.includes('BMW')) ? 'checked' : '' %>>
+            BMW
+        </label>
+        <label>
+            <input onclick="submitForm()" type="checkbox" name="checkboxBrand" value="Audi"
+                <%= (checkboxesChecked && checkboxesChecked.includes('Audi')) ? 'checked' : '' %>>
+            Audi
+        </label>
+    </div>
 </div>
-<div class="flex flex-col gap-2 justify-center">
+<div class="flex flex-col gap-2 justify-center mt-10 p-3">
     <p>Range of price:</p>
-    <div class="relative">
-        <span class="top-0 left-0">0</span>
-        <input type="range" min="0" max="100" value="50">
-        <span class="top-0 right-10">100</span>
+    <div class="relative w-52">
+        <span class="top-0 left-0"><%= minPrice %></span>
+        <input type="range" min="0" max="100" value="50" class="w-52">
+        <span class="absolute top-0 right-0"><%= maxPrice %></span>
     </div>
 
 </div>
