--- a/views/partials/filterComponent.ejs
+++ b/views/partials/filterComponent.ejs
@@ -2,16 +2,13 @@
 <div class="flex flex-col mt-10 gap-5">
     <p class="flex justify-center text-xl">Brand:</p>
     <div class="flex flex-col gap-2">
+        <% carBrandsAll.forEach(brand => { %>
         <label>
-            <input onclick="submitForm()" type="checkbox" name="checkboxBrand" value="BMW"
-                <%= (checkboxesChecked && checkboxesChecked.includes('BMW')) ? 'checked' : '' %>>
-            BMW
+            <input onclick="submitForm()" type="checkbox" name="checkboxBrand" value="<%= brand.name %>"
+                <%= (checkboxesChecked && checkboxesChecked.includes(brand.name)) ? 'checked' : '' %>>
+            <%= brand.name  %>
         </label>
-        <label>
-            <input onclick="submitForm()" type="checkbox" name="checkboxBrand" value="Audi"
-                <%= (checkboxesChecked && checkboxesChecked.includes('Audi') ) ? 'checked' : '' %>>
-            Audi
-        </label>
+        <% }) %>
     </div>
 </div>
 <div class="flex flex-col gap-2 justify-center mt-10 p-3">
