--- a/views/partials/filterComponent.ejs
+++ b/views/partials/filterComponent.ejs
@@ -15,7 +15,7 @@
     <p>Range of price:</p>
     <div class="relative w-52">
         <span class="top-0 left-0"><%= minPrice %></span>
-        <input type="range" min="0" max="100" value="50" class="w-52">
+        <input class="rangeInputFilter" type="range" min="0" max="100" value="50">
         <span class="absolute top-0 right-0"><%= maxPrice %></span>
     </div>
 
