--- a/views/partials/newsletter.ejs
+++ b/views/partials/newsletter.ejs
@@ -6,7 +6,7 @@
     </div>
 
     <div class="flex gap-4">
-        <input class="p-3 border-2 border-gray-400" type="text" placeholder="Enter your email...">
+        <input class="p-3 border-2 border-primary" type="text" placeholder="Enter your email...">
         <button class="uppercase btn bg-black text-white">submit</button>
     </div>
 </div>
