--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -554,19 +554,61 @@ video {
   position: relative;
 }
 
-.mx-5{
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
+.bottom-0{
+  bottom: 0px;
 }
 
-.mx-10{
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
+.left-0{
+  left: 0px;
 }
 
-.mx-auto{
-  margin-left: auto;
-  margin-right: auto;
+.left-14{
+  left: 3.5rem;
+}
+
+.left-80{
+  left: 20rem;
+}
+
+.right-0{
+  right: 0px;
+}
+
+.right-8{
+  right: 2rem;
+}
+
+.top-0{
+  top: 0px;
+}
+
+.top-10{
+  top: 2.5rem;
+}
+
+.top-14{
+  top: 3.5rem;
+}
+
+.top-20{
+  top: 5rem;
+}
+
+.top-32{
+  top: 8rem;
+}
+
+.z-10{
+  z-index: 10;
+}
+
+.col-span-3{
+  grid-column: span 3 / span 3;
+}
+
+.mx-16{
+  margin-left: 4rem;
+  margin-right: 4rem;
 }
 
 .mx-20{
@@ -574,19 +616,19 @@ video {
   margin-right: 5rem;
 }
 
-.mx-36{
-  margin-left: 9rem;
-  margin-right: 9rem;
+.mx-7{
+  margin-left: 1.75rem;
+  margin-right: 1.75rem;
 }
 
-.my-8{
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+.my-10{
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 
-.my-16{
-  margin-top: 4rem;
-  margin-bottom: 4rem;
+.my-20{
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 .my-28{
@@ -594,25 +636,44 @@ video {
   margin-bottom: 7rem;
 }
 
-.my-11{
-  margin-top: 2.75rem;
-  margin-bottom: 2.75rem;
+.mb-20{
+  margin-bottom: 5rem;
 }
 
-.ml-11{
-  margin-left: 2.75rem;
+.mb-52{
+  margin-bottom: 13rem;
 }
 
-.ml-36{
-  margin-left: 9rem;
+.ml-16{
+  margin-left: 4rem;
 }
 
-.mt-11{
-  margin-top: 2.75rem;
+.ml-80{
+  margin-left: 20rem;
 }
 
-.mb-28{
-  margin-bottom: 7rem;
+.mt-10{
+  margin-top: 2.5rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
+}
+
+.mt-20{
+  margin-top: 5rem;
+}
+
+.mt-32{
+  margin-top: 8rem;
+}
+
+.mt-profileMarginTop{
+  margin-top: 155px;
+}
+
+.mb-24{
+  margin-bottom: 6rem;
 }
 
 .flex{
@@ -623,44 +684,150 @@ video {
   display: grid;
 }
 
+.hidden{
+  display: none;
+}
+
+.h-16{
+  height: 4rem;
+}
+
+.h-2\/3{
+  height: 66.666667%;
+}
+
+.h-3{
+  height: 0.75rem;
+}
+
 .h-36{
   height: 9rem;
 }
 
-.h-44{
-  height: 11rem;
+.h-5{
+  height: 1.25rem;
 }
 
-.h-4{
-  height: 1rem;
+.h-auto{
+  height: auto;
 }
 
-.h-48{
-  height: 12rem;
+.h-imgSlider{
+  height: 40rem;
+}
+
+.h-newsLetter{
+  height: 30rem;
+}
+
+.h-popularCar{
+  height: 40rem;
+}
+
+.h-productsImg{
+  height: 20rem;
+}
+
+.h-singleCarPage{
+  height: 40rem;
 }
 
 .max-h-index{
   max-height: 40rem;
 }
 
+.min-h-48{
+  min-height: 12rem;
+}
+
+.w-10{
+  width: 2.5rem;
+}
+
+.w-12{
+  width: 3rem;
+}
+
+.w-3\/4{
+  width: 75%;
+}
+
+.w-40{
+  width: 10rem;
+}
+
+.w-44{
+  width: 11rem;
+}
+
+.w-48{
+  width: 12rem;
+}
+
+.w-5{
+  width: 1.25rem;
+}
+
+.w-52{
+  width: 13rem;
+}
+
+.w-72{
+  width: 18rem;
+}
+
 .w-full{
   width: 100%;
 }
 
-.w-28{
-  width: 7rem;
+.w-imgSlider{
+  width: 50rem;
 }
 
-.w-56{
-  width: 14rem;
+.w-newsLetter{
+  width: 40rem;
 }
 
-.w-64{
-  width: 16rem;
+.w-popularCar{
+  width: 50rem;
+}
+
+.w-productsImg{
+  width: 25rem;
+}
+
+.w-singleCarPage{
+  width: 50rem;
+}
+
+.transform{
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer{
+  cursor: pointer;
+}
+
+.resize-x{
+  resize: horizontal;
+}
+
+.appearance-none{
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .grid-cols-4{
   grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-cols-5{
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -683,16 +850,72 @@ video {
   justify-content: space-around;
 }
 
+.gap-1{
+  gap: 0.25rem;
+}
+
+.gap-10{
+  gap: 2.5rem;
+}
+
+.gap-2{
+  gap: 0.5rem;
+}
+
+.gap-20{
+  gap: 5rem;
+}
+
+.gap-3{
+  gap: 0.75rem;
+}
+
+.gap-4{
+  gap: 1rem;
+}
+
 .gap-5{
   gap: 1.25rem;
+}
+
+.gap-6{
+  gap: 1.5rem;
+}
+
+.gap-7{
+  gap: 1.75rem;
 }
 
 .gap-8{
   gap: 2rem;
 }
 
-.border-4{
-  border-width: 4px;
+.gap-9{
+  gap: 2.25rem;
+}
+
+.overflow-hidden{
+  overflow: hidden;
+}
+
+.rounded{
+  border-radius: 0.25rem;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
+.rounded-tl-lg{
+  border-top-left-radius: 0.5rem;
+}
+
+.rounded-tr-lg{
+  border-top-right-radius: 0.5rem;
+}
+
+.border-2{
+  border-width: 2px;
 }
 
 .border-black{
@@ -700,9 +923,58 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
+.border-primary{
+  --tw-border-opacity: 1;
+  border-color: rgb(150 151 153 / var(--tw-border-opacity));
+}
+
 .bg-black{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-gray-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+
+.bg-green-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.p-10{
+  padding: 2.5rem;
+}
+
+.p-2{
+  padding: 0.5rem;
+}
+
+.p-3{
+  padding: 0.75rem;
+}
+
+.p-4{
+  padding: 1rem;
+}
+
+.p-5{
+  padding: 1.25rem;
+}
+
+.p-6{
+  padding: 1.5rem;
+}
+
+.px-16{
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 
 .px-20{
@@ -710,8 +982,56 @@ video {
   padding-right: 5rem;
 }
 
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.pb-5{
+  padding-bottom: 1.25rem;
+}
+
+.pl-10{
+  padding-left: 2.5rem;
+}
+
+.pl-5{
+  padding-left: 1.25rem;
+}
+
+.pr-10{
+  padding-right: 2.5rem;
+}
+
+.pt-14{
+  padding-top: 3.5rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
+}
+
+.pt-6{
+  padding-top: 1.5rem;
+}
+
 .font-bodyFont{
   font-family: Rubik;
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl{
@@ -724,12 +1044,53 @@ video {
   line-height: 2.5rem;
 }
 
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
 
+.uppercase{
+  text-transform: uppercase;
+}
+
+.leading-7{
+  line-height: 1.75rem;
+}
+
+.leading-8{
+  line-height: 2rem;
+}
+
+.tracking-wide{
+  letter-spacing: 0.025em;
+}
+
 .tracking-wider{
   letter-spacing: 0.05em;
+}
+
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-primary{
+  --tw-text-opacity: 1;
+  color: rgb(150 151 153 / var(--tw-text-opacity));
 }
 
 .text-white{
@@ -741,8 +1102,32 @@ video {
   text-decoration-line: underline;
 }
 
+.opacity-0{
+  opacity: 0;
+}
+
 .opacity-85{
   opacity: 0.85;
+}
+
+.shadow-2xl{
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.transition-opacity{
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-500{
+  transition-duration: 500ms;
+}
+
+.duration-700{
+  transition-duration: 700ms;
 }
 
 .btn{
@@ -768,7 +1153,154 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.hover\:text-yellow-400:hover{
+.inputContact{
+  display: flex;
+  width: 24rem;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.footerH{
+  display: flex;
+  justify-content: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-family: Rubik;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+}
+
+.cardFooter{
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  height: 4rem;
+  width: 11rem;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(150 151 153 / var(--tw-border-opacity));
+}
+
+.cardFooter:hover{
+  border-style: none;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
-  color: rgb(250 204 21 / var(--tw-text-opacity));
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.aFooter{
+  display: flex;
+  justify-content: center;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+}
+
+.aFooter:hover{
+  text-decoration-line: underline;
+}
+
+.featuredDivFooter{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.divAbout{
+  display: flex;
+  width: 50%;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.25rem;
+}
+
+.filterProductsSelect{
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(150 151 153 / var(--tw-border-opacity));
+  padding: 0.75rem;
+  padding-right: 5rem;
+}
+
+.rangeInputFilter {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  background-color: white;
+  width: 13rem;
+  border-radius: 20px;
+  border: 2px solid black;
+  cursor: pointer;
+  padding-top: 3px;
+  padding-bottom: 3px
+}
+
+.rangeInputFilter::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  background-color: black;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.sortSelect {
+  top: 30px;
+  right: 140px;
+  position: absolute
+}
+
+.inputNewCar{
+  height: 2.5rem;
+  width: 18rem;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(150 151 153 / var(--tw-border-opacity));
+  padding: 1.25rem;
+}
+
+.inputNewCarDiv{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.checked\:bg-black:checked{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.hover\:scale-125:hover{
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-150:hover{
+  --tw-scale-x: 1.5;
+  --tw-scale-y: 1.5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:transform:hover{
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:font-bold:hover{
+  font-weight: 700;
+}
+
+.hover\:text-primary:hover{
+  --tw-text-opacity: 1;
+  color: rgb(150 151 153 / var(--tw-text-opacity));
 }
