--- a/views/editCars.ejs
+++ b/views/editCars.ejs
@@ -4,18 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DriftDreams</title>
+    <title>Document</title>
     <link rel="stylesheet" href="/styles/output.css">
 </head>
 
 <body>
     <%- include ./partials/nav.ejs  %>
-
-    <div class="mx-16">
-        <%- include ./partials/contactPage.ejs  %>
-    </div>
-    <%- include ./partials/footer.ejs  %>
-
+    <p>Ovo je view za edit cars</p>
 </body>
 
 </html>
