--- a/views/itemPage.ejs
+++ b/views/itemPage.ejs
@@ -13,7 +13,7 @@
     <%- include ./partials/nav.ejs  %>
     <div class="my-20 flex justify-center">
         <div class="flex w-singleCarPage flex-col items-center">
-            <img class="h-singleCarPage rounded" src="../img/<%= car.model %>.jpg" alt="">
+            <img class="h-singleCarPage rounded" src="../img/<%= car.model %>.jpg" alt="<%= car.model  %>">
             <div class="w-full p-10 font-bodyFont">
                 <div class="flex flex-col gap-5">
                     <h2 class="flex justify-center text-2xl underline">Car information:</h2>
