--- a/views/partials/mostPopularItem.ejs
+++ b/views/partials/mostPopularItem.ejs
@@ -1,22 +1,23 @@
 <div class="flex flex-col items-center">
     <h2 class="text-2xl font-bodyFont underline">Car of the week:</h2>
-    <div class="my-10">
-        <div class="overflow-hidden">
-            <img class="w-popularCar h-popularCar center rounded-lg cursor-pointer hover:scale-150 hover:transform duration-500"
-                src="../img/<%= popularCar.model %>.jpg" alt="">
-        </div>
-
-        <div class="bg-white pb-5 shadow-2xl">
-            <div class="text-xl pt-5 pl-5">
-                <span>
-                    <%= popularCar.brand.name %>
-                </span>
-                <span><%= popularCar.model  %></span>
+    <a href="/products/<%= popularCar._id %>">
+        <div class="my-10">
+            <div class="overflow-hidden">
+                <img class="w-popularCar h-popularCar center rounded-lg cursor-pointer hover:scale-150 hover:transform duration-500"
+                    src="../img/<%= popularCar.model %>.jpg" alt="">
             </div>
-            <div class="flex justify-between">
-                <span class="text-primary pl-5 "><%= popularCar.year + "." %></span>
-                <span class="font-bold text-2xl pr-10"><%= popularCar.price + " $" %></span>
+            <div class="bg-white pb-5 shadow-2xl">
+                <div class="text-xl pt-5 pl-5">
+                    <span>
+                        <%= popularCar.brand.name %>
+                    </span>
+                    <span><%= popularCar.model  %></span>
+                </div>
+                <div class="flex justify-between">
+                    <span class="text-primary pl-5 "><%= popularCar.year + "." %></span>
+                    <span class="font-bold text-2xl pr-10"><%= popularCar.price + " $" %></span>
+                </div>
             </div>
         </div>
-    </div>
+    </a>
 </div>
