--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,12 +1,60 @@
-<nav class="flex gap-5 h-36 justify-between px-20 items-center">
+<nav class="flex gap-5 h-36 justify-between items-center ml-16">
     <h1 class="font-bodyFont font-bold text-3xl tracking-wider underline">
-        <%= title %>
+        <a href="/">
+            DriftDreams
+        </a>
     </h1>
     <ul class="flex gap-8 items-center">
-        <li class="liNav">ABOUT</li>
-        <li class="liNav">PRODUCTS</li>
-        <li class="liNav">CONTACT</li>
+        <li class="liNav">
+            <a href="/about">ABOUT</a>
+        </li>
+        <li class="liNav">
+            <a href="/products">PRODUCTS</a>
+        </li>
+        <li class="liNav">
+            <a href="/contact">CONTACT</a>
+        </li>
         <li class="bg-black text-white btn">CART</li>
-
+        <li class="relative min-h-48 w-40 flex-col flex gap-4 mt-profileMarginTop bg-white">
+            <svg class="profileLogo w-10 cursor-pointer" xmlns="http://www.w3.org/2000/svg" version="1.0"
+                viewBox="0 0 1280.000000 1231.000000" preserveAspectRatio="xMidYMid meet">
+                <metadata>
+                    <script xmlns="" />
+                    Created by potrace 1.15, written by Peter Selinger 2001-2017
+                </metadata>
+                <g transform="translate(0.000000,1231.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none">
+                    <path
+                        d="M6130 12304 c-19 -2 -84 -9 -145 -15 -700 -67 -1430 -353 -2000 -783 -233 -175 -534 -465 -707 -681 -709 -884 -1016 -1994 -857 -3100 136 -946 604 -1817 1309 -2438 141 -124 340 -275 478 -365 l93 -60 -53 -12 c-142 -33 -472 -125 -628 -176 -1667 -538 -2896 -1531 -3385 -2733 -150 -369 -235 -788 -235 -1161 0 -105 33 -638 46 -737 l5 -43 6349 0 6349 0 5 43 c13 98 46 631 46 732 0 316 -60 668 -167 980 -436 1276 -1666 2326 -3398 2900 -192 64 -561 170 -665 190 -19 4 -41 10 -48 14 -7 4 41 43 130 104 376 254 691 554 960 912 97 129 185 262 241 361 24 43 66 117 92 164 68 118 162 328 229 507 242 655 307 1374 186 2078 -74 431 -242 900 -461 1289 -84 148 -249 391 -365 536 -138 173 -441 476 -614 614 -140 112 -386 279 -525 358 -377 213 -789 368 -1210 453 -250 51 -410 66 -725 70 -162 2 -311 1 -330 -1z" />
+                </g>
+            </svg>
+            <ul
+                class="profileList hidden flex-col gap-4 items-center p-5 font-bodyFont bg-white absolute top-14 z-10 right-8 w-48 border-2 border-primary">
+                <h3 class="text-2xl font-bold">Admin</h3>
+                <div class="flex flex-col items-center gap-1 text-primary">
+                    <a href="/newCar">
+                        <li class="hover:font-bold cursor-pointer ">Add new car</li>
+                    </a>
+                    <a href="/newBrand">
+                        <li class="hover:font-bold cursor-pointer">Add new brand</li>
+                    </a>
+                    <a href="/editCars">
+                        <li class="hover:font-bold cursor-pointer">Edit cars</li>
+                    </a>
+                    <li class="hover:font-bold cursor-pointer">Sign out</li>
+                </div>
+            </ul>
+        </li>
     </ul>
 </nav>
+
+<script>
+    // JavaScript to toggle dropdown menu visibility
+    document.addEventListener("DOMContentLoaded", () => {
+        const profileLogo = document.querySelector(".profileLogo");
+        profileLogo.addEventListener("click", () => {
+            const dropdownMenu = document.querySelector(".profileList");
+            dropdownMenu.classList.toggle("hidden");
+            dropdownMenu.classList.toggle("flex");
+        });
+    });
+</script>
