--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,20 @@
 <div class="bg-black h-auto py-10 text-white grid grid-cols-5 font-bodyFont">
     <div class="col-span-3">
         <h3 class="footerH">Popular models</h3>
-        <% if(cars.length > 0) { %>
+        <% if(cars.length > 8) { %>
+        <div class="grid grid-cols-4 gap-5 h-2/3 p-6 pl-10 w-full justify-center items-center ">
+            <% for(let i = 0; i < 8; i++) { %>
+            <a href="/products/<%= cars[i]._id %>">
+                <div class="cardFooter">
+                    <p>
+                        <span><%= cars[i].brand.name  %></span>
+                        <span><%= cars[i].model  %></span>
+                    </p>
+                </div>
+            </a>
+            <% } %>
+        </div>
+        <% } else if (cars.length > 0) { %>
         <div class="grid grid-cols-4 gap-5 h-2/3 p-6 pl-10 w-full justify-center items-center ">
             <% for(let i = 0; i< cars.length; i++) { %>
             <a href="/products/<%= cars[i]._id %>">
@@ -14,7 +27,7 @@
             </a>
             <% } %>
         </div>
-        <% } else { %>
+        <% } else{ %>
         <p class="flex justify-center">Database is currently empty.
             When you add some cars to it, first 4 cars will get displayed here</p>
         <% } %>
