--- a/views/editCars.ejs
+++ b/views/editCars.ejs
@@ -17,10 +17,10 @@
             edit or delete any car you want.</p>
         <div class="flex justify-center mt-20 mb-48">
             <% if(cars.length > 0){ %>
-            <ul class="border-separate">
+            <ul>
                 <% for (car of cars) { %>
                 <li>
-                    <form action="" method="post" id="<%= car._id  %>"
+                    <div action="" method="post"
                         class="border-2 border-primary w-editPageProducts p-5 grid grid-cols-11">
 
                         <div class="carModel col-span-3 flex justify-center items-center gap-2 font-bold text-xl">
@@ -37,7 +37,7 @@
 
                         <div class="col-span-2 flex gap-5 justify-center items-center">
 
-                            <div onclick="submitForm(event,'<%= car._id %>')"
+                            <div onclick="submitDelete('<%= car._id %>')"
                                 class="deleteButton w-12 bg-black fill-white p-3 cursor-pointer hover:bg-slate-700">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                     <title>delete</title>
@@ -46,7 +46,7 @@
                                 </svg>
                             </div>
 
-                            <div onclick="submitForm()"
+                            <div onclick="submitEdit('<%= car._id %>')"
                                 class="editButton w-12 bg-black fill-white p-3 cursor-pointer hover:bg-slate-700">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                     <title>pencil</title>
@@ -54,8 +54,23 @@
                                         d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z" />
                                 </svg>
                             </div>
+                            <!-- Delete form 
+                                Pravim input model, dajem mu value car.model, da bih mogao uzeti njegovu vrednost u post metodi i prosleditit ga DELETE funkciji
+                            -->
+                            <form id="deleteForm_<%= car._id %>" action="" method="post" name="delete"
+                                style="display: none;">
+                                <input type="hidden" name="carIdDelete" value="<%= car._id %>">
+                            </form>
+
+                            <!-- Edit form 
+                                Pravim input model, dajem mu value car.model, da bih mogao uzeti njegovu vrednost u post metodi i prosleditit ga EDIT funkciji
+                            -->
+                            <form id="editForm_<%= car._id %>" action="" method="post" name="edit"
+                                style="display: none;">
+                                <input type="hidden" name="carIdEdit" value="<%= car._id %>">
+                            </form>
                         </div>
-                    </form>
+                    </div>
                 </li>
                 <% }  %>
             </ul>
@@ -66,16 +81,20 @@
     </div>
     <%- include ./partials/footer.ejs  %>
     <script>
-        function submitForm(event, id) {
-            event.preventDefault();
+        function submitDelete(carId) {
+            console.log(`Car ID je: ${carId}`)
+            // Submit the delete form
+            const form2 = document.querySelector("form");
+            console.log(form2)
+            const form = document.querySelector(`#deleteForm_${carId}`)
+            form.submit()
+        }
 
-            const form = document.querySelector(`form[id="${id}"]`);
-
-            if (form) {
-                form.submit();
-            } else {
-                console.error('Form not found for car ID:', id);
-            }
+        // Function to submit edit form
+        function submitEdit(carId) {
+            // Submit the edit form
+            const form = document.querySelector(`#editForm_${carId}`)
+            form.submit()
         }
     </script>
 </body>
