Updated variable for getAllCars and products page render function

--- a/views/partials/imageSliderIndex.ejs
+++ b/views/partials/imageSliderIndex.ejs
@@ -1,6 +1,6 @@
 <div>
-    <% if(cars.length > 0) { %>
-    <% cars.forEach(car => { %>
+    <% if(imgSliderCars.length > 0) { %>
+    <% imgSliderCars.forEach(car => { %>
     <a href="/products/<%= car._id  %>">
         <div class="slide relative hidden">
             <div class="overflow-hidden w-imgSlider">
