--- a/views/editCars.ejs
+++ b/views/editCars.ejs
@@ -33,7 +33,7 @@
 
                         <p class="col-span-1 flex items-center"><%= car.price + "$" %></p>
 
-                        <p class="col-span-4 flex items-center"><%= car.description %></p>
+                        <p class="col-span-4 flex items-center justify-center"><%= car.description %></p>
 
                         <div class="col-span-2 flex gap-5 justify-center items-center">
 
